--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="image-column">
                 <div class="image-column-wrapper">
                     <div class="top-logo-placeholder"><img src="https://i.imgur.com/7G8CoRs.png"></div>
-                    <div class="image-guide"><img src="https://i.imgur.com/zalLgCd.png"></div>
+                    <div class="image-guide"><img src="https://i.imgur.com/rkKyGnO.png"></div>
                     <div class="bottom-values-container">
                         <div class="value-line">
                             <span class="value-item"><span class="lider-letter">L</span>iderazgo</span>
